create Task complete

--- a/assets/css/addTask.css
+++ b/assets/css/addTask.css
@@ -246,6 +246,10 @@ body {
     cursor: pointer;
 }
 
+.add_task_selected {
+    background-color: #D2E3FF;
+}
+
 .category_circle_color {
     box-sizing: border-box;
     width: 20px;
