--- a/assets/templates/addTaskPopUp.html
+++ b/assets/templates/addTaskPopUp.html
@@ -16,6 +16,8 @@
     <script src="assets/js/header.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/addTask.js"></script>
+    <script src="assets/js/board.js"></script>
+    <script src="assets/js/contacts.js"></script>
 </head>
 
 <body>
@@ -39,13 +41,13 @@
                     </div>
                     <a class="field_required d-none" id="titleRequiredPU">This field is required</a>
                 </div>
-                <div class="add_task_contacts_cont column-flex-start" id="assignedContactcont">
+                <div class="add_task_contacts_cont column-flex-start" id="assignedContactcontPU">
                     <div class="add_task_contacts column-flex-start">
                         <div class="contacts_img_cont row-center" onclick="expandMenu()" id="selecContacts">
                             <a class="add_task_subtitle font400">Select contacts to assign</a>
                             <img src="assets/img/contactsArrow.svg" class="add_task_contacts_arrow">
                         </div>
-                        <div class="contacts_hidden_cont column-flex-start d-none" id="contactsList">
+                        <div class="contacts_hidden_cont column-flex-start d-none" id="contactsListPU">
                             <!--Template Contacts-->
                         </div>
                     </div>
