--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -96,7 +96,19 @@ body {
     border-radius: 8px;
 }
 
-@media (width < 600px) {
+@media (width < 1200px) {
+    .menu_principal {
+        width: 190px;
+    }
+}
+
+@media (width < 1000px) {
+    .menu_principal {
+        width: 150px;
+    }
+}
+
+@media (width < 850px) {
     .menu_principal {
         width: -webkit-fill-available;
         height: 76px;
