--- a/assets/templates/menu.html
+++ b/assets/templates/menu.html
@@ -1,51 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
-        rel="stylesheet" />
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
+      rel="stylesheet"
+    />
 
     <script src="assets/js/script.js"></script>
     <script src="assets/js/login-signup.js"></script>
     <script src="assets/js/summary.js"></script>
-    
-    <link rel="stylesheet" href="assets/css/login-signup.css">
-    <link rel="stylesheet" href="assets/css/models.css">
-    <link rel="stylesheet" href="assets/css/menu.css">
-</head>
 
-<body>
+    <link rel="stylesheet" href="assets/css/login-signup.css" />
+    <link rel="stylesheet" href="assets/css/models.css" />
+    <link rel="stylesheet" href="assets/css/menu.css" />
+  </head>
+
+  <body>
     <div class="menu_principal column-center menu_large">
-        <div class="menu_links column-center-flexstart">
-            <div class="menu_all summary_background row-center" onclick="openSummary()" id="summary">
-                <img class="icon_summary" src="assets/img/iconSummary.svg">
-                <a class="text_menu font400">Summary</a>
-            </div>
-            <div class="menu_all row-center board_background" onclick="openBoard()">
-                <img class="icon_board" src="assets/img/iconBoard.svg">
-                <a class="text_menu font400">Board</a>
-            </div>
-            <div class="menu_all row-center addTask_background" onclick="openAddTask()">
-                <img class="icon_addTask" src="assets/img/iconAddTask.svg">
-                <a class="text_menu font400">Add Task</a>
-            </div>
-            <div class="menu_all row-center contacts_background" onclick="openContacts()">
-                <img class="icon_contacts" src="assets/img/iconContacts.svg">
-                <a class="text_menu font400">Contacts</a>
-            </div>
+      <div class="menu_links column-center-flexstart">
+        <div
+          class="menu_all summary_background row-center"
+          onclick="openSummary()"
+          id="summary"
+        >
+          <img class="icon_summary" src="assets/img/iconSummary.svg" />
+          <a class="text_menu font400">Summary</a>
         </div>
-        <div class="menu_legal">
-            <div class="menu_legal_cont row-center" onclick="openlegal()">
-                <img class="menu_legal_icon" src="assets/img/iconLegal.svg">
-                <a class="menu_legal_text font400">Legal notice</a>
-            </div>
+        <div
+          class="menu_all row-center addTask_background"
+          onclick="openAddTask()"
+        >
+          <img class="icon_addTask" src="assets/img/iconAddTask.svg" />
+          <a class="text_menu font400">Add Task</a>
         </div>
+        <div class="menu_all row-center board_background" onclick="openBoard()">
+          <img class="icon_board" src="assets/img/iconBoard.svg" />
+          <a class="text_menu font400">Board</a>
+        </div>
+        <div
+          class="menu_all row-center contacts_background"
+          onclick="openContacts()"
+        >
+          <img class="icon_contacts" src="assets/img/iconContacts.svg" />
+          <a class="text_menu font400">Contacts</a>
+        </div>
+      </div>
+      <div class="menu_legal column-flexstart">
+        <div class="menu_privacy_cont row-center" onclick="openlegal()">
+          <a class="menu_privacy_text font400">Privacy Policy</a>
+        </div>
+        <div class="menu_legal_cont row-center" onclick="openlegal()">
+          <a class="menu_legal_text font400">Legal notice</a>
+        </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
